dynamically change profile content depends on account type