@@ -3,6 +3,7 @@ package kg.attractor.jobsearch.service.impl;
 import kg.attractor.jobsearch.dao.VacancyDao;
 import kg.attractor.jobsearch.dto.VacancyDto;
 import kg.attractor.jobsearch.exception.VacancyNotFoundException;
+import kg.attractor.jobsearch.mapper.CustomVacancyMapper;
 import kg.attractor.jobsearch.model.Vacancy;
 import kg.attractor.jobsearch.service.VacancyService;
 import lombok.RequiredArgsConstructor;
@@ -12,7 +13,6 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -64,19 +64,7 @@ public class VacancyServiceImpl implements VacancyService {
 
     @Override
     public void createVacancy(VacancyDto vacancyDto) {
-        Vacancy vacancy = new Vacancy();
-//        User.setId(userDto.getId());
-        vacancy.setName(vacancyDto.getName());
-        vacancy.setDescription(vacancyDto.getDescription());
-        vacancy.setCategoryId(vacancyDto.getCategoryId());
-        vacancy.setSalary(vacancyDto.getSalary());
-        vacancy.setExpFrom(vacancyDto.getExpFrom());
-        vacancy.setExpTo(vacancyDto.getExpTo());
-        vacancy.setIsActive(vacancyDto.getIsActive());
-        vacancy.setAuthorId(vacancyDto.getAuthorId());
-        vacancy.setCreatedDate(vacancyDto.getCreatedDate());
-        vacancy.setUpdateTime(vacancyDto.getUpdateTime());
-
+        Vacancy vacancy = CustomVacancyMapper.fromDto(vacancyDto);
         vacancyDao.addVacancy(vacancy);
         log.info("added vacancy {}", vacancy.getName());
     }
@@ -97,20 +85,8 @@ public class VacancyServiceImpl implements VacancyService {
     public List<VacancyDto> getVacanciesUserResponded(Integer userId) {
         List<Vacancy> vacancies = vacancyDao.getVacanciesUserResponded(userId);
         List<VacancyDto> dtos = vacancies.stream()
-                .map(vacancy -> VacancyDto.builder()
-                        .name(vacancy.getName())
-                        .description(vacancy.getDescription())
-                        .categoryId(vacancy.getCategoryId())
-                        .salary(vacancy.getSalary())
-                        .expFrom(vacancy.getExpFrom())
-                        .expTo(vacancy.getExpTo())
-                        .isActive(vacancy.getIsActive())
-                        .authorId(vacancy.getAuthorId())
-                        .createdDate(vacancy.getCreatedDate())
-                        .updateTime(vacancy.getUpdateTime())
-                        .build())
-                .collect(Collectors.toList());
-
+                .map(CustomVacancyMapper::toDto)
+                .toList();
         if (dtos.isEmpty()) {
             log.error("Can't find vacancies with user id {}", userId);
         } else {
@@ -123,24 +99,12 @@ public class VacancyServiceImpl implements VacancyService {
     public List<VacancyDto> getVacanciesByCategoryId(Integer categoryId) {
         List<Vacancy> vacancies = vacancyDao.getVacanciesByCategoryId(categoryId);
         List<VacancyDto> dtos = vacancies.stream()
-                .map(vacancy -> VacancyDto.builder()
-                        .name(vacancy.getName())
-                        .description(vacancy.getDescription())
-                        .categoryId(vacancy.getCategoryId())
-                        .salary(vacancy.getSalary())
-                        .expFrom(vacancy.getExpFrom())
-                        .expTo(vacancy.getExpTo())
-                        .isActive(vacancy.getIsActive())
-                        .authorId(vacancy.getAuthorId())
-                        .createdDate(vacancy.getCreatedDate())
-                        .updateTime(vacancy.getUpdateTime())
-                        .build())
-                .collect(Collectors.toList());
-
+                .map(CustomVacancyMapper::toDto)
+                .toList();
         if (dtos.isEmpty()) {
-            log.error("Can't find vacancies with category id " + categoryId);
+            log.error("Can't find vacancies with category id {}", categoryId);
         } else {
-            log.info("found vacancies with category id " + categoryId);
+            log.info("found vacancies with category id {}", categoryId);
         }
         return dtos;
     }
@@ -154,6 +118,14 @@ public class VacancyServiceImpl implements VacancyService {
     public List<VacancyDto> getVacanciesByCategory(String category) {
         // todo - implement
         return List.of();
+    }
+
+    @Override
+    public List<VacancyDto> getVacancyByAuthorId(Integer id) {
+        List<Vacancy> vacancies = vacancyDao.getVacanciesByAuthorId(id);
+        return vacancies.stream()
+                .map(CustomVacancyMapper::toDto)
+                .toList();
     }
 
 }
